--- a/QuizBattle/src/main/resources/templates/layout/components.html
+++ b/QuizBattle/src/main/resources/templates/layout/components.html
@@ -216,9 +216,16 @@
 		
 		    <ul class="nav flex-column bg-white mb-0">
 		      <li class="nav-item">
-		        <a href="#" class="nav-link">
-		            <i class="fa fa-area-chart fa-fw"></i>
+		        <a href="#" th:href="@{/Admin/User/List}" class="nav-link">
+		            <i class="fa fa-users fa-fw"></i>
 		           User List
+		        </a>
+		      </li>
+		      
+		      <li class="nav-item">
+		        <a href="#" th:href="@{/Admin/Notification/Manage}" class="nav-link">
+		            <i class="fa fa-users fa-fw"></i>
+		          Common Notification
 		        </a>
 		      </li>
 		    
